<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/design_default_color_primary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_height"
        android:layout_marginBottom="@dimen/layout_margin_bottom"
        android:scaleType="centerCrop"
        android:contentDescription="@string/content_description_user_image" />

    <TextView
        android:id="@+id/textViewFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_first_name" />

    <TextView
        android:id="@+id/textViewLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_last_name" />

    <TextView
        android:id="@+id/textViewPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_phone_number" />

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_age" />

    <TextView
        android:id="@+id/textViewDaysUntilBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_days_until_birthday" />
    <TextView
        android:id="@+id/textViewMonthsUntilBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_months_until_birthday" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_exit" />
</LinearLayout>
